--- a/elastic/kibana.yaml
+++ b/elastic/kibana.yaml
@@ -1,20 +1,22 @@
 apiVersion: kibana.k8s.elastic.co/v1
 kind: Kibana
 metadata:
+  annotations: {}
   name: kibana
+  namespace: elastic
 spec:
-  version: 8.8.0
   count: 1
   elasticsearchRef:
-    name: "monitoring"
+    name: monitoring
   podTemplate:
     spec:
       containers:
-      - name: kibana
-        resources:
-          limits:
-            memory: 4Gi
-            cpu: 2
+        - name: kibana
+          resources:
+            limits:
+              cpu: "2"
+              memory: 4Gi
+  version: 8.8.0
 ---
 apiVersion: route.openshift.io/v1
 kind: Route
